fix : added proper margins and paddings in Header and Title for smaller screens to prevent the distortion

--- a/src/styles/components/Home/TopBarMobile.css
+++ b/src/styles/components/Home/TopBarMobile.css
@@ -2,6 +2,8 @@
   display: none;
 }
 
+
+
 @media (max-width: 900px) {
   .topbar-mobile {
     display: flex;
@@ -133,7 +135,7 @@
     }
   }
   .topbar-mobile__sidebar-drawer {
-    width: 80vw;
+    width: fit-content;
     max-width: 320px;
     height: 100vh;
     background: var(--color-bg);
@@ -183,14 +185,15 @@
     color: var(--color-neon-violet);
   }
   .topbar-mobile__sidebar-drawer {
-    width: 21vw;
-    max-width: 10vw;
+   min-width: fit-content;
   }
 }
 
 @media (max-width: 768px) {
  .topbar-mobile__sidebar-drawer {
-    width: 21vw;
-    max-width: 30vw;
-  }
+  min-width: fit-content;
+}
+.topbar-mobile__sidebar-close{
+  margin-right: 2.2rem;
+}
 }
